log
ju., 28 de sep. de 2023 16:10:19: 
 tests:  0|4
total_score: 0/70
fd5b7de
ju., 28 de sep. de 2023 16:16:07: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
b6b6c43
ju., 28 de sep. de 2023 16:29:24: 
 heap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
86f51ca
ju., 28 de sep. de 2023 16:30:42: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
1f925be
ju., 28 de sep. de 2023 16:31:42: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
7754df8
ju., 28 de sep. de 2023 16:34:26: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:42:8: error: unused variable 'superior' [-Werror=unused-variable]
    int superior = pq -> size - 1 / 2;
        ^~~~~~~~
heap.c:41:8: error: unused variable 'inferior' [-Werror=unused-variable]
    int inferior = pq -> size;
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2291091
